tests/errors/multi_resolve_error.tau
func main() -> int{
    arr := [_]int{1,2,3};
    x: xxx = []int;
    y := int;
    return 0;
}

#x := main();
